--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>ProprePropre</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Laverie N°1 de Lyon - Services de lavage, nettoyage à sec, repassage et détachage. Commandez en ligne dès maintenant!">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
