--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProprePropre</title>
+  <title>Propre-Propre</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Laverie N°1 de Lyon - Services de lavage, nettoyage à sec, repassage et détachage. Commandez en ligne dès maintenant!">
